# AIGC_gallery

./: .gitignore  AGENTS.md  README.en.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/gallery/: GalleryGrid.tsx  ImageCard.tsx  ImageDetail.tsx
frontend/src/components/layout/: Header.tsx  SettingsPage.tsx  Sidebar.tsx  StatusBar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  NeuButton.tsx  NeuCard.tsx  NeuInput.tsx  NeuTag.tsx  NeuTextarea.tsx  Tag.tsx  Textarea.tsx  index.ts
frontend/src/hooks/: index.ts  useFavorites.ts  useGallery.ts  useNSFWFilter.ts  useStats.ts  useTags.ts
frontend/src/i18n/: index.tsx
frontend/src/i18n/locales/: en.ts  zh.ts
frontend/src/lib/: tauri.ts  utils.ts
frontend/src/types/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  commands.rs  config.rs  db.rs  import_commands.rs  lib.rs  main.rs  metadata.rs  metadata_jpeg.rs  metadata_png.rs  metadata_webp.rs
src-tauri/src/utils/: mod.rs  paths.rs  thumbnail.rs
