[package]
name = "aigc-gallery"
version = "0.2.2"
edition = "2021"

[lib]
name = "aigc_gallery_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "collation"] }
image = "0.25"
kamadak-exif = "0.6"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "2"
dirs-next = "2"
walkdir = "2"
tauri-plugin-log = "2.8.0"
log = "0.4.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
keyring = { version = "3", features = ["windows-native"] }
zip = "0.6"
